Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerBoolObjField.quorum
class Main
    Boolean v
    v:SetValue(true)
    action Main
        Test(v)
    end

    action Test(integer var)
    end
end
